RESOLVED FIXED280365
REGRESSION(284236@main): 16x TestWebKitAPI.ElementTargeting* (api-tests) are constant assertions
https://bugs.webkit.org/show_bug.cgi?id=280365
Summary REGRESSION(284236@main): 16x TestWebKitAPI.ElementTargeting* (api-tests) are...
Dawn Morningstar
Reported 2024-09-25 16:33:00 PDT
I suspect 284236@main caused TestWebKitAPI.ElementTargeting.AdjustVisibilityAfterRecreatingElement TestWebKitAPI.ElementTargeting.AdjustVisibilityForTargetsInShadowRoot TestWebKitAPI.ElementTargeting.AdjustVisibilityForUnparentedElement TestWebKitAPI.ElementTargeting.BasicElementTargeting TestWebKitAPI.ElementTargeting.CountVisibilityAdjustmentsAfterNavigatingBack TestWebKitAPI.ElementTargeting.DoNotIgnorePointerEventsNone TestWebKitAPI.ElementTargeting.NearbyOutOfFlowElements TestWebKitAPI.ElementTargeting.ParentRelativeSelectors TestWebKitAPI.ElementTargeting.ReplacedRendererSizeIgnoresPageScaleAndZoom TestWebKitAPI.ElementTargeting.RequestElementsFromSelectors TestWebKitAPI.ElementTargeting.RequestTargetedElementsBySearchableText TestWebKitAPI.ElementTargeting.SkipSnapshotForNonReplacedElementWithoutChildren TestWebKitAPI.ElementTargeting.SnapshotElementWithVisibilityAdjustment TestWebKitAPI.ElementTargeting.TargetContainsShadowRoot TestWebKitAPI.ElementTargeting.TargetedElementWithLargeImage TestWebKitAPI.ElementTargeting.TargetInFlowElements To all assert. Will attach assertion as soon as the gateway stops timing out. HISTORY: https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.ElementTargeting.AdjustVisibilityAfterRecreatingElement&test=TestWebKitAPI.ElementTargeting.AdjustVisibilityForTargetsInShadowRoot&test=TestWebKitAPI.ElementTargeting.AdjustVisibilityForUnparentedElement&test=TestWebKitAPI.ElementTargeting.BasicElementTargeting&test=TestWebKitAPI.ElementTargeting.CountVisibilityAdjustmentsAfterNavigatingBack&test=TestWebKitAPI.ElementTargeting.DoNotIgnorePointerEventsNone&test=TestWebKitAPI.ElementTargeting.NearbyOutOfFlowElements&test=TestWebKitAPI.ElementTargeting.ParentRelativeSelectors&test=TestWebKitAPI.ElementTargeting.ReplacedRendererSizeIgnoresPageScaleAndZoom&test=TestWebKitAPI.ElementTargeting.RequestElementsFromSelectors&test=TestWebKitAPI.ElementTargeting.RequestTargetedElementsBySearchableText&test=TestWebKitAPI.ElementTargeting.SkipSnapshotForNonReplacedElementWithoutChildren&test=TestWebKitAPI.ElementTargeting.SnapshotElementWithVisibilityAdjustment&test=TestWebKitAPI.ElementTargeting.TargetContainsShadowRoot&test=TestWebKitAPI.ElementTargeting.TargetInFlowElements&test=TestWebKitAPI.ElementTargeting.TargetedElementWithLargeImage
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-25 16:33:38 PDT
Dawn Morningstar
Comment 2 2024-09-25 16:37:46 PDT
TestWebKitAPI.ElementTargeting.TargetedElementWithLargeImage ASSERTION FAILED: m_wrapper /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebKit/Shared/API/APIObject.cpp(62) : API::Object::Object() 1 0x344875074 API::Object::Object() 2 0x3444568bc API::ObjectImpl<(API::Object::Type)23>::ObjectImpl() 3 0x34445686c API::TargetedElementRequest::TargetedElementRequest() 4 0x34445247c API::TargetedElementRequest::TargetedElementRequest() 5 0x344452398 -[_WKTargetedElementRequest init] 6 0x34445256c -[_WKTargetedElementRequest initWithPoint:] 7 0x104ce51e8 -[WKWebView(ElementTargeting) targetedElementInfoAt:] 8 0x104cf14f0 TestWebKitAPI::ElementTargeting_TargetedElementWithLargeImage_Test::TestBody() 9 0x10581edbc void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 10 0x1057cfd24 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 11 0x1057cfc74 testing::Test::Run() 12 0x1057d0be8 testing::TestInfo::Run() 13 0x1057d1d9c testing::TestSuite::Run() 14 0x1057e0088 testing::internal::UnitTestImpl::RunAllTests() 15 0x105823c1c bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 16 0x1057dfa28 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 17 0x1057df914 testing::UnitTest::Run() 18 0x104bac424 RUN_ALL_TESTS() 19 0x104bac3b8 TestWebKitAPI::TestsController::run(int, char**) 20 0x1057b7db4 main 21 0x18af97154 start LEAK: 1 WebPage LEAK: 1 WebFrame LEAK: 8 RenderObject LEAK: 1 Page LEAK: 1 Frame LEAK: 2 CachedResource LEAK: 23 WebCoreNode
Wenson Hsieh
Comment 3 2024-09-25 17:31:44 PDT
EWS
Comment 4 2024-09-25 17:43:58 PDT
Committed 284253@main (ccb1c37549a3): <https://commits.webkit.org/284253@main> Reviewed commits have been landed. Closing PR #34270 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.