REGRESSION(284236@main): 16x TestWebKitAPI.ElementTargeting* (api-tests) are constant assertions https://bugs.webkit.org/show_bug.cgi?id=280365 rdar://136715046

Reviewed by Abrar Rahman Protyasha and Geoffrey Garen.

Fix a latent issue in `_WKTargetedElementRequest`, which was caught by the debug assertion added in
284236@main. Currently, we invoke `API::Object`'s copy constructor upon creating the wrapped API
object, which causes the `m_wrapper` to be `nil`.

* Source/WebKit/Shared/API/APIObject.h:
* Source/WebKit/UIProcess/API/APITargetedElementRequest.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKTargetedElementRequest.mm:
(-[_WKTargetedElementRequest init]):

Canonical link: https://commits.webkit.org/284253@main